style.css
* {
    box-sizing: border-box;
}

body {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 20px;
}

h1 {
    text-align: center;
}

#game {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: space-between;
    align-items: center;
}

#game-board {
    align-self: stretch;
    display: grid;
    margin: 16px;
    justify-content: center;
    align-content: center;

    grid-auto-flow: row;
    grid-template-rows: auto;
    grid-template-columns: repeat(9, 1fr);

    gap: 0;

    max-width: 800px;
    text-align: center;
    max-height: 600px;
    overflow-y: scroll;
}

.number-cell {
    aspect-ratio: 1 / 1;
    display: flex;
    justify-content: center;
    align-content: baseline;
    background: white;
    border: 1px darkgray solid;
    transition: background 100ms;
}

.number-cell[data-active="true"]:hover {
    background: rgb(176, 199, 254);
    border: 1px black solid;
}

.number-cell[data-selected="true"] {
    background: rgb(112, 153, 251);
    border: 1px black solid;
}


.number-cell[data-active="true"] {
    cursor: pointer;
}

.number-cell[data-active="false"] {
    background: rgb(216, 216, 216);
}

button {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 20px;
    padding: 5px;
    border-radius: 50%;
    aspect-ratio: 1 / 1;
    border: 2px black solid;
    outline: none;
    cursor: pointer;
}

#info-bar {
    width: 100%;
    display: flex;
    padding: 15px;
    flex-direction: row;
    justify-content: space-between;
    gap: 10px;
    align-items: baseline;
}

#info-bar p {
    display: inline-block;
}

